apps/tandoor/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tandoor
  labels:
    name: tandoor
    app.kubernetes.io/name: tandoor
